*Version 2.3.1*
* Slight improvements to the UI table auto formatting
* Added Database storage for Logs
* Added NoSQL access for log storage

*Version 2.3.0*
* Added purge now options to all data sources
* Added some helpful features for developers to use the NoSQL Proxy for Database Type Modules
* Added ability to disable Data Type drop down menu JSP Tag using the 'disabled' attribute
* Fixed bug in editing Multistate Points where the value of 0 might be confused with an empty value 
* Fixed bug in editing Data Sources where the Data Source points list filters would be reset upon save.
* Added ip address of user to Login Event that is then viewable on Alarms Page.
* Added feature to session cookie that allows users to login to multiple mangos on the same host at the same time (Upgraded ma-priv to 1.1.6)
* Enhanced in-memory logging
* Improved Startup/Shutdown pages to show more logging information
* Added new jsp tag:versionedJavascript to force Browsers to update their cache on new Mango Releases (this requires the minor release number upgrade)

*Version 2.2.3*
* Skipping version to start new versioning plan.  Even numbers are full releases and odd numbers are development releases.


*Version 2.2.2*
* Fixed bugs in Point Hierarchy importer to allow merging of folders.  Folders with the same name are merged into system.  Points duplicated across folders will only be saved as the last folder they are stored in.
* Renamed Import/Export icon to Configuration Import/Export
* Upgraded ma-priv to 1.1.5 due to ssl, startup and shutdown enhancements
* Upgraded serotonin-utils to 2.0.1 to capture new Serial Port stream enhancements that improve reliability
* Adding shutdown button to modules page and creating startup/shutdown pages to show users the system progress during these times.
* Added ability for administrators to switch user from the Users page

*Version 2.2.1*
* License bug where web server was loaded before license and was always limiting ip addresses to 3

