@@ -220,6 +220,14 @@ common.durationDays={0} days
 common.user.userDisabled=User {0} is disabled.
 common.user.suUserComplete=User changed to {0}
 
+common.logging.trace=Trace
+common.logging.debug=Debug
+common.logging.info=Info
+common.logging.warn=Warning
+common.logging.error=Error
+common.logging.fatal=Fatal
+common.logging.all=All
+
 share.sharing=Sharing
 share.userName=Username
 share.accessType=Access type
